<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mmros_dataloader</name>
  <version>0.0.0</version>
  <description>The ROS 2 package to load and publish open dataset.</description>
  <maintainer email="kotaro.uetake@tier4.jp">ktro2828</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>mmros_msgs</exec_depend>
  <exec_depend>python3-nuscenes-devkit-pip</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
